Fixing sizing on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,22 @@
 @media (max-width: 999px) {
 /* Header & Hero */
     body {
-        font-size: 18px;
+        font-size: 12px;
         padding: 10px;
         font-family: Verdana;
         background-color: #e1c86d;
         color: #000000;
         margin: 0;
-        font-size: 12px;
+        font-size: 10x;
     }
     
     header {
         text-align: center;
-        padding: 10px;
+        padding: 5px;
     }
 
     #hero {
-        padding: 10px;
+        padding: 5px;
         background-color: #5db8e0;
         text-align: center;
         justify-content: space-between;
@@ -26,33 +26,33 @@
 
     .project {
         align-items: center;
-        border: solid 2px #000000;
+        border: solid 1px #000000;
         display: flex;
         justify-content: flex-end;
         align-items: center;
         background-color: #5db8e0;
-        padding: 5px;
-        border-radius: 3px;
+        padding: 2px;
+        border-radius: 1px;
     }
 
     #projects{
-        margin: 10px;
+        margin: 5px;
     }
 
     .description {
         text-align: center;
-        padding: 10px;
+        padding: 5px;
         justify-content: space-between;
     }
 
     .img {
-        width: 100%;
+        width: 90%;
         height: auto;
     }
 /* Reviews */
 
     #reviews {
-        padding: 10px;
+        padding: 5px;
         align-items: center;
         display: flex;
         justify-content: space-around;
@@ -64,13 +64,13 @@
 
     .review1, .review2, .review3 {
         width: 90%;
-        margin: 10px;
-        font-size: 14px;
+        margin: 5px;
+        font-size: 7px;
         background: #5db8e0;
         padding: 7px;
         border-radius: 2px;
         box-shadow: 0 2px 2px black rgba(0,0,0, 0.1);
-        font-size: 12px;
+        font-size: 10px;
         text-align: center;
         background: #5db8e0;
         border: solid 2px #000000;
